syntax = "proto3";

package zarf.v1;

option go_package = "github.com/enel1221/zarf-operator/pkg/zarf/v1";

import "google/protobuf/duration.proto";

service ZarfService {
    // Deploy deploys a Zarf package
    rpc Deploy(DeployRequest) returns (DeployResponse);

    // Remove removes a deployed package
    rpc Remove(RemoveRequest) returns (RemoveResponse);

    // GetDeployedPackage gets info about a deployed package
    rpc GetDeployedPackage(GetDeployedPackageRequest) returns (GetDeployedPackageResponse);

    // ListDeployedPackages lists all deployed packages
    rpc ListDeployedPackages(ListDeployedPackagesRequest) returns (ListDeployedPackagesResponse);

    // GetPackageMetadata fetches metadata without deploying
    rpc GetPackageMetadata(GetPackageMetadataRequest) returns (GetPackageMetadataResponse);

    // Health check
    rpc Health(HealthRequest) returns (HealthResponse);
}

message DeployRequest {
    string source = 1;
    repeated string components = 2;
    map<string, string> set_variables = 3;
    bool adopt_existing_resources = 4;
    google.protobuf.Duration timeout = 5;
    int32 retries = 6;
    string namespace_override = 7;
    string shasum = 8;
    bool skip_signature_validation = 9;
    string architecture = 10;
    int32 oci_concurrency = 11;
    string public_key_path = 12;
    string log_level = 13;
    string log_format = 14;
    bool no_color = 15;
    bool plain_http = 16;
    bool insecure_skip_tls_verify = 17;
    bool skip_version_check = 18;
}

message DeployResponse {
    string package_name = 1;
    string version = 2;
    int32 generation = 3;
    repeated DeployedComponent deployed_components = 4;
    string error = 5;
}

message DeployedComponent {
    string name = 1;
    string status = 2;
    repeated InstalledChart installed_charts = 3;
    int32 observed_generation = 4;
}

message InstalledChart {
    string namespace = 1;
    string chart_name = 2;
    string status = 3;
}

message RemoveRequest {
    string package_name = 1;
    repeated string components = 2;
    google.protobuf.Duration timeout = 3;
    string namespace_override = 4;
    bool skip_version_check = 5;
}

message RemoveResponse {
    string error = 1;
}

message GetDeployedPackageRequest {
    string package_name = 1;
}

message GetDeployedPackageResponse {
    PackageInfo package = 1;
    string error = 2;
}

message ListDeployedPackagesRequest {}

message ListDeployedPackagesResponse {
    repeated PackageInfo packages = 1;
    string error = 2;
}

message PackageInfo {
    string name = 1;
    string version = 2;
    int32 generation = 3;
    string cli_version = 4;
    repeated DeployedComponent deployed_components = 5;
    string namespace_override = 6;
}

message GetPackageMetadataRequest {
    string source = 1;
}

message GetPackageMetadataResponse {
    PackageMetadata metadata = 1;
    string error = 2;
}

message PackageMetadata {
    string name = 1;
    string version = 2;
    string description = 3;
    repeated string components = 4;
    string architecture = 5;
}

message HealthRequest {}

message HealthResponse {
    bool healthy = 1;
    string version = 2;
    string message = 3;
}
